# examgenerator

./: pyproject.toml
examgenerator/: __init__.py  generator.py
examgenerator/preprocessors/: __init__.py  copyfiles.py  copytasks.py  generatetaskids.py  makeexam.py  makesolution.py  removeexam.py  removesolutionfiles.py  scrambletasks.py
examgenerator/sampling/: __init__.py  constraints.py  sampler.py  validator.py
examgenerator/tasks/: __init__.py  orderedtaskgroup.py  permutationgroup.py  sampledtaskgroup.py  task.py  taskgroup.py
