[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "examgenerator"
description = "A tool for creating randomized exams for e2xgrader"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Tim Metzler", email = "tim.metzler@h-brs.de" },
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "e2xcore>=0.0.5",
    "e2xgrader>=0.1.1"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/Digiklausur/examgenerator"
Issues = "https://github.com/Digiklausur/examgenerator/issues"


[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-cov",
    "hatchling",
    "tbump"
]

[tool.hatch.version]
path = "examgenerator/__version__.py"

[tool.tbump]
github_url = "https://github.com/Digiklausur/examgenerator/"

[tool.tbump.version]
current = "0.0.0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<dev>-dev\d+)?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# Files with the version present
[[tool.tbump.file]]
src = "e2xgrader/__version__.py"

[[tool.tbump.file]]
src = "docs/source/conf.py"

[[tool.tbump.file]]
src = "lerna.json"

[[tool.tbump.file]]
src = "package.json"
search = '"version": "{current_version}'

[[tool.tbump.file]]
src = "packages/*/package.json"
search = '"version": "{current_version}'

[[tool.tbump.file]]
src = "packages/*/package.json"
search = '"@e2xgrader/[\w-]+": "{current_version}'

[tool.ruff]
line-length = 100
ignore-init-module-imports = true
select = ["F", "E", "I"]
